fix text align + tripadvisor logo

--- a/src/css/Text.css
+++ b/src/css/Text.css
@@ -17,7 +17,7 @@
 
 .text {
     font-family: 'Lora', serif;
-    text-align: center;
+    text-align: justify;
     font-size: 16px;
     font-style: normal;
     line-height: 23.8px;
